WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303888
AX: ariaNotify and live region notifications should not post synchronously
https://bugs.webkit.org/show_bug.cgi?id=303888
Summary
AX: ariaNotify and live region notifications should not post synchronously
Joshua Hoffman
Reported
2025-12-09 15:51:07 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-09 15:51:13 PST
<
rdar://problem/166180012
>
Joshua Hoffman
Comment 2
2025-12-09 15:59:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55141
EWS
Comment 3
2025-12-10 08:44:04 PST
Committed
304231@main
(cdf9fa96c26e): <
https://commits.webkit.org/304231@main
> Reviewed commits have been landed. Closing PR #55141 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug