AX: ariaNotify and live region notifications should not post synchronously https://bugs.webkit.org/show_bug.cgi?id=303888 rdar://166180012

Reviewed by Tyler Wilcock.

Unlike postNotification, ariaNotify and live region notifications currently post synchronously.
This means that it's possible for these notifications to fire during the middle of
performDeferredCacheUpdate, leading to unexpected behaviors.

This patch uses the existing m_notificationsToPost mechanism to post these types off notifications
as well. In order to do this with rich notification data like these contain, that array now
stores a new struct, AXNotificationWithData. This struct allows for storing additional bits of
data for notifications as needed.

This patch also contins some test cleanup and the modification of one expectation that
was incorrect due to empty notification content being permitted.

* LayoutTests/accessibility/mac/aria-notify-with-options.html:
* LayoutTests/accessibility/mac/aria-notify.html:
* LayoutTests/accessibility/mac/live-regions/live-region-removals-expected.txt:
* Source/WebCore/accessibility/AXLiveRegionManager.cpp:
(WebCore::AXLiveRegionManager::postAnnouncementForChange):
* Source/WebCore/accessibility/AXLogger.cpp:
(WebCore::AXLogger::log):
* Source/WebCore/accessibility/AXLogger.h:
* Source/WebCore/accessibility/AXNotifications.h:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::notificationPostTimerFired):
(WebCore::AXObjectCache::postNotification):
(WebCore::AXObjectCache::postARIANotifyNotification):
(WebCore::AXObjectCache::postLiveRegionNotification):
(WebCore::AXObjectCache::updateIsolatedTree):
* Source/WebCore/accessibility/AXObjectCache.h:
(WebCore::AXNotificationWithData::AXNotificationWithData):
* Source/WebCore/accessibility/ios/AXObjectCacheIOS.mm:
(WebCore::AXObjectCache::postPlatformARIANotifyNotification):
(WebCore::AXObjectCache::postPlatformLiveRegionNotification):
* Source/WebCore/accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::postPlatformARIANotifyNotification):
(WebCore::AXObjectCache::postPlatformLiveRegionNotification):

Canonical link: https://commits.webkit.org/304231@main