Source/WebCore/accessibility/ios/AXObjectCacheIOS.mm
@@ -133,22 +133,20 @@ void AXObjectCache::postPlatformAnnouncementNotification(const String& message)
     }
 }
 
-void AXObjectCache::postPlatformARIANotifyNotification(const String& announcement, NotifyPriority priority, InterruptBehavior interruptBehavior, const String& language)
+void AXObjectCache::postPlatformARIANotifyNotification(const AriaNotifyData& notificationData)
 {
-    AriaNotifyData notificationData { announcement, priority, interruptBehavior, language };
-
     if (RefPtr page = document() ? document()->page() : nullptr)
-        page->chrome().relayAriaNotifyNotification(WTFMove(notificationData));
+        page->chrome().relayAriaNotifyNotification(AriaNotifyData { notificationData });
 
     // For tests, also call the wrapper's accessibilityPostedNotification.
     if (gShouldRepostNotificationsForTests) [[unlikely]] {
         if (RefPtr root = getOrCreate(m_document->view())) {
             RetainPtr notificationName = notificationPlatformName(AXNotification::AnnouncementRequested).createNSString();
-            RetainPtr message = announcement.createNSString();
+            RetainPtr message = notificationData.message.createNSString();
             RetainPtr announcementString = adoptNS([[NSAttributedString alloc] initWithString:message.get() attributes:@{
-                @"UIAccessibilityARIAPriority": notifyPriorityToAXValueString(priority).get(),
-                @"UIAccessibilityARIAInterruptBehavior": interruptBehaviorToAXValueString(interruptBehavior).get(),
-                @"UIAccessibilitySpeechAttributeLanguage": language.createNSString().get()
+                @"UIAccessibilityARIAPriority": notifyPriorityToAXValueString(notificationData.priority).get(),
+                @"UIAccessibilityARIAInterruptBehavior": interruptBehaviorToAXValueString(notificationData.interrupt).get(),
+                @"UIAccessibilitySpeechAttributeLanguage": notificationData.language.createNSString().get()
             }]);
             [root->wrapper() accessibilityPostedNotification:notificationName.get() userInfo:@{ notificationName.get() : announcementString.get() }];
         }
@@ -161,20 +159,18 @@ static NSString * const UIAccessibilityPriorityDefault = @"UIAccessibilityPriori
 static NSString * const UIAccessibilitySpeechAttributeAnnouncementPriority = @"UIAccessibilitySpeechAttributeAnnouncementPriority";
 static NSString * const UIAccessibilitySpeechAttributeIsLiveRegion = @"UIAccessibilitySpeechAttributeIsLiveRegion";
 
-void AXObjectCache::postPlatformLiveRegionNotification(AccessibilityObject&, LiveRegionStatus status, const AttributedString& announcement)
+void AXObjectCache::postPlatformLiveRegionNotification(AccessibilityObject&, const LiveRegionAnnouncementData& notificationData)
 {
-    LiveRegionAnnouncementData notificationData { announcement, status };
-
     if (RefPtr page = document() ? document()->page() : nullptr)
-        page->chrome().relayLiveRegionNotification(WTFMove(notificationData));
+        page->chrome().relayLiveRegionNotification(LiveRegionAnnouncementData { notificationData });
 
     // For tests, also call the wrapper's accessibilityPostedNotification.
     if (gShouldRepostNotificationsForTests) [[unlikely]] {
         if (RefPtr root = getOrCreate(m_document->view())) {
             RetainPtr notificationName = notificationPlatformName(AXNotification::AnnouncementRequested).createNSString();
-            RetainPtr priority = status == LiveRegionStatus::Assertive ? UIAccessibilityPriorityDefault : UIAccessibilityPriorityLow;
+            RetainPtr priority = notificationData.status == LiveRegionStatus::Assertive ? UIAccessibilityPriorityDefault : UIAccessibilityPriorityLow;
 
-            auto mutableAttributedString = adoptNS([[NSMutableAttributedString alloc] initWithAttributedString:announcement.nsAttributedString().get()]);
+            auto mutableAttributedString = adoptNS([[NSMutableAttributedString alloc] initWithAttributedString:notificationData.message.nsAttributedString().get()]);
             [mutableAttributedString addAttribute:UIAccessibilitySpeechAttributeAnnouncementPriority value:priority.get() range:NSMakeRange(0, [mutableAttributedString length])];
             [mutableAttributedString addAttribute:UIAccessibilitySpeechAttributeIsLiveRegion value:@(YES) range:NSMakeRange(0, [mutableAttributedString length])];
 
